# DR-GSMamba

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  EXPERIMENT_PLAN.md  LICENSE  LITERATURE_TRACKING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  run_experiments.py  train.py
configs/: defaults.yaml  houston2013.yaml  indian_pines.yaml  pavia_centre.yaml  pavia_university.yaml  salinas.yaml  synthetic.yaml
configs/baselines/: cnn3d.yaml  hybridsn.yaml  knn.yaml  mambahsi.yaml  nonlocal_gcn.yaml  rf.yaml  spectralformer.yaml  ssftt.yaml  svm.yaml
configs/datasets/: houston_2013.yaml  indian_pines.yaml  pavia_university.yaml  salinas.yaml
configs/model/: cfa_gdro.yaml  dr_gsmamba.yaml
configs/training/: default.yaml  label_10.yaml  label_20.yaml  label_3.yaml  label_5.yaml
datasets/: __init__.py  hsi_dataset.py
docs/: baselines.md
docs/math/: cfa_gdro.md  cp_graph.md  evidential_prototype_head.md
losses/: __init__.py  objectives.py
models/: __init__.py  baselines.py  dr_gsmamba.py
outputs/: _quick_log.txt  baselines_summary_indian_pines_seed0_spc5.json
outputs/_verify_fix/: final.json  metrics.json
outputs/advanced_baselines_smoke/: summary.json
outputs/advanced_baselines_smoke/nonlocal_gcn_lite/: summary.json
outputs/advanced_baselines_smoke/nonlocal_gcn_lite/seed_0/: metrics.json
outputs/advanced_baselines_smoke/spectralformer_lite/: summary.json
outputs/advanced_baselines_smoke/spectralformer_lite/seed_0/: metrics.json
outputs/advanced_baselines_smoke/ssftt_lite/: summary.json
outputs/advanced_baselines_smoke/ssftt_lite/seed_0/: metrics.json
outputs/deep_baselines_smoke/: summary.json
outputs/deep_baselines_smoke/cnn2d/: summary.json
outputs/deep_baselines_smoke/cnn2d/seed_0/: metrics.json
outputs/deep_baselines_smoke/spectral_mlp/: summary.json
outputs/deep_baselines_smoke/spectral_mlp/seed_0/: metrics.json
outputs/diag_eph_gn/: metrics.json
outputs/indian_pines_cnn3d_seed0/: final.json  metrics.json
outputs/indian_pines_knn_seed0/: final.json
outputs/indian_pines_rf_seed0/: final.json
outputs/indian_pines_svm_seed0/: final.json
outputs/mamba_baseline_smoke/: summary.json
outputs/mamba_baseline_smoke/mamba_lite/: summary.json
outputs/mamba_baseline_smoke/mamba_lite/seed_0/: metrics.json
outputs/mamba_smoke/: summary.json
outputs/mamba_smoke/seed_0/: metrics.json
outputs/profile/: synthetic_profile.json
outputs/protocol_smoke/: protocol_summary.json
outputs/protocol_smoke/ablations/full/: summary.json
outputs/protocol_smoke/ablations/spectral_cnn/: summary.json
outputs/protocol_smoke/ablations/spectral_transformer/: summary.json
outputs/smoke_strengthened/: summary.json
outputs/smoke_strengthened/seed_0/: metrics.json
outputs/smoke_v1/: final.json  metrics.json
outputs/smoke_v2/: metrics.json
outputs/synthetic/: summary.json
outputs/synthetic/seed_0/: metrics.json
outputs/synthetic_cnn/: summary.json
outputs/synthetic_cnn/seed_0/: metrics.json
outputs/synthetic_transformer/: summary.json
outputs/synthetic_transformer/seed_0/: metrics.json
paper/: DR-GSMamba_manuscript.docx  abstract_v1.md  main.aux  main.tex  references.bib
paper/sections/: conclusion.tex  experiments.tex  introduction.tex  method.tex  methodology.tex  related_work.tex
paper/tables/: main_results.tex
scripts/: _phase2b_exit_check.py  _phase2e_smoke.py  compare_runs.py  generate_classification_maps.py  generate_figures.py  generate_tables.py  make_architecture_figure.py  make_docx.py  make_figures.py  make_main_tables.py  profile_model.py  run_ablations.py  run_baselines.py  run_deep_baselines.py  run_internal_ablation.py  run_multi_seed.py  run_reliability_protocol.py  run_robustness.py  run_shallow_baselines.py  train.py
src/hsi_robust/: __init__.py  _version.py
src/hsi_robust/baselines/: __init__.py  base.py  cnn3d.py  hybridsn.py  mambahsi.py  nonlocal_gcn.py  registry.py  shallow.py  spectralformer.py  ssftt.py  trainer.py
src/hsi_robust/data/: __init__.py  hsi_dataset.py  io.py  sampler.py  scene_freq.py  transforms.py
src/hsi_robust/eval/: __init__.py  calibration.py  metrics.py  qualitative.py  temperature_scaling.py
src/hsi_robust/losses/: __init__.py  baselines.py  cfa_gdro.py  cp_graph.py  evidential.py
src/hsi_robust/models/: __init__.py  cfa_gdro.py  cp_graph.py  dr_gsmamba.py  evidential_head.py  fusion.py  op_s4.py  spatial_stem.py
src/hsi_robust/training/: __init__.py  ema_class_loss.py  optim.py  trainer.py
src/hsi_robust/utils/: __init__.py  config.py  seeding.py
tests/: conftest.py  test_baselines.py  test_data.py  test_internal_ablation.py  test_losses.py  test_models.py  test_smoke.py  test_temperature_scaling.py  test_training.py
utils/: common.py  metrics.py
(+13 files in other folders)
