[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# PEP 621 project metadata
# ---------------------------------------------------------------------------
[project]
name = "hsi-robust"
version = "0.0.1"
description = "Class-Frequency-Aware Group-DRO for Reliable Label-Scarce Hyperspectral Image Classification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DR-GSMamba project" }]
keywords = [
  "hyperspectral",
  "image-classification",
  "distributionally-robust-optimization",
  "evidential-deep-learning",
  "calibration",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies (also mirrored in requirements.txt for non-pyproject installs).
dependencies = [
  "torch>=2.1,<3",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "einops>=0.7",
  "PyYAML>=6.0",
  "h5py>=3.9",
  "fvcore>=0.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1.6",
  "black>=23.11",
  "mypy>=1.7",
  "pre-commit>=3.5",
]

[project.urls]
Roadmap = "file://./roadmap.md"
"Experiment plan" = "file://./EXPERIMENT_PLAN.md"
Math = "file://./docs/math/"

# ---------------------------------------------------------------------------
# Setuptools src-layout
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["hsi_robust*"]

# ---------------------------------------------------------------------------
# Ruff (lint + import sort)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]
extend-exclude = ["data", "related_paper", "task_details", "outputs"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "RUF", # ruff-specific
]
ignore = [
  "E501", # long lines (handled by formatter, math expressions often exceed)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]                # asserts are the whole point in tests
"scripts/*" = ["T201"]               # print is fine in CLI scripts
"**/__init__.py" = ["F401", "F403"]  # public re-exports

[tool.ruff.lint.isort]
known-first-party = ["hsi_robust"]

# ---------------------------------------------------------------------------
# Black (formatter)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | data
  | related_paper
  | task_details
  | outputs
  | build
  | dist
)/
'''

# ---------------------------------------------------------------------------
# mypy (CI only, not enforced at pre-commit; see roadmap §8 open question 2)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
files = ["src/hsi_robust"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
strict_equality = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
filterwarnings = [
  # Treat warnings as errors so silent regressions are caught; allow torch / numpy 2 churn for now.
  "ignore::DeprecationWarning:torch.*",
  "ignore::UserWarning:torch.*",
]

# ---------------------------------------------------------------------------
# Coverage (used in CI; not required for Phase 2A exit criteria)
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["hsi_robust"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
